deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: plweb
spec:
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
        - name: app
          image: registry.wieru.com/plweb:1.0
          # image: nginx
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 9000
            protocol: TCP
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: plweb
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: postgres:alpine
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
          - containerPort: 5432
            protocol: TCP
