deploy/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plweb-proxy
  namespace: plweb
spec:
  selector:
    matchLabels:
      app: plweb-proxy
  template:
    metadata:
      labels:
        app: plweb-proxy
    spec:
      containers:
        - name: plweb-proxy
          image: nginx
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
