deploy/plweb-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-proxy
  namespace: plweb
spec:
  selector:
    matchLabels:
      app: app-proxy
  template:
    metadata:
      labels:
        app: app-proxy
    spec:
      containers:
        - name: app-proxy
          image: registry.wieru.com/proxy
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
