deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-proxy-svc
  namespace: plweb
spec:
  selector:
    app: app-proxy
  ports:
  - name: app-proxy
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort

---

apiVersion: v1
kind: Service
metadata:
  name: app-svc
  namespace: plweb
spec:
  selector:
    app: app
  ports:
  - name: app
    protocol: TCP
    port: 80
    targetPort: 80
  type: NodePort
  
---

apiVersion: v1
kind: Service
metadata:
  name: db-svc
  namespace: plweb
spec:
  selector:
    app: db
  ports:
  - name: db
    protocol: TCP
    port: 5432
    targetPort: 5432
